--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   flutter_bloc: ^8.1.3
   delayed_display: ^2.0.0
+  flutter_google_places: ^0.3.0
+  intl_phone_number_input: ^0.7.3+1
+  image_picker: ^1.0.4
+  animated_size_and_fade: ^3.0.1
+
+  
 
 dev_dependencies:
   flutter_test:
