--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   intl_phone_number_input: ^0.7.3+1
   image_picker: ^1.0.4
-  animated_size_and_fade: ^3.0.1
+  flutter_colorpicker: ^1.0.3
 
   
 
