--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.0
   cloud_firestore: ^4.9.2
+  firebase_storage: ^11.2.8
   font_awesome_flutter: ^10.5.0
   flutter_bloc: ^8.1.3
   delayed_display: ^2.0.0
@@ -44,6 +45,7 @@ dependencies:
   intl_phone_number_input: ^0.7.3+1
   image_picker: ^1.0.4
   flutter_colorpicker: ^1.0.3
+  
 
   
 
