--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   image_picker: ^1.0.4
   flutter_colorpicker: ^1.0.3
   equatable: ^2.0.5
-  
+  share_plus: ^7.1.0
+  url_launcher: ^6.1.14
+  qr_flutter: ^4.1.0
 
   
 
