--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,13 @@ dependencies:
   flutter_bloc: ^8.1.3
   delayed_display: ^2.0.0
   flutter_google_places: ^0.3.0
-  intl_phone_number_input: ^0.7.3+1
   image_picker: ^1.0.4
   flutter_colorpicker: ^1.0.3
   equatable: ^2.0.5
   share_plus: ^7.1.0
   url_launcher: ^6.1.14
   qr_flutter: ^4.1.0
+  shared_preferences: ^2.2.1
 
   
 
