--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>Votre message d'autorisation en cours d'utilisation</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Votre message d'autorisation en arrière-plan</string>
 </dict>
 </plist>
