--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
   url_launcher: ^6.1.14
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.1
+  geolocator: ^10.1.0
+  background_fetch: ^1.1.3
+  permission_handler: ^11.0.1
 
-  
 
 dev_dependencies:
   flutter_test:
