--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   geolocator: ^10.1.0
   background_fetch: ^1.1.3
   permission_handler: ^11.0.1
-
+  geocoding: ^2.1.1
 
 dev_dependencies:
   flutter_test:
