--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,9 @@ dependencies:
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.1
   geolocator: ^10.1.0
-  background_fetch: ^1.1.3
   permission_handler: ^11.0.1
   geocoding: ^2.1.1
+  cron: ^0.5.1
 
 dev_dependencies:
   flutter_test:
