--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   googleapis_auth: ^1.4.1
   firebase_remote_config: ^4.2.7
   flutter_slidable: ^3.0.0
+  cloud_functions: ^4.4.2
 
 dev_dependencies:
   flutter_test:
