--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_remote_config: ^4.2.7
   flutter_slidable: ^3.0.0
   cloud_functions: ^4.4.2
+  mailer: ^6.0.1
 
 dev_dependencies:
   flutter_test:
