--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:label="NearCard"
         android:name="${applicationName}"
@@ -39,6 +40,10 @@
     android:resource="@style/colorPrimary" />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <service android:name="yukams.app.background_locator_2.IsolateHolderService"
+  android:permission="android.permission.FOREGROUND_SERVICE"
+  android:exported="true"
+  android:foregroundServiceType = "location"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
