--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   flutter_slidable: ^3.0.0
   cloud_functions: ^4.4.2
   mailer: ^6.0.1
+  location: ^5.0.3
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
