--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   mailer: ^6.0.1
   location: ^5.0.3
   qr_code_scanner: ^1.0.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
